Fix viewport on mobile devices

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -151,7 +151,6 @@ h1, h2 {
   font-display: swap;
 }
 .header {
-  height: 100vh;
   background: linear-gradient(158deg, #121D39 71%, white 29%);
   padding-bottom: 30px;
 }
@@ -248,6 +247,11 @@ h1, h2 {
   .header__control-banner a {
     padding: 14px 30px;
     font-size: 18px;
+  }
+}
+@media (min-width: 992px) {
+  .header {
+    height: 100vh;
   }
 }
 @media (max-width: 992px) {
