--- a/scss/components/header/header-media.scss
+++ b/scss/components/header/header-media.scss
@@ -15,6 +15,11 @@
     }
   }
 }
+@media (min-width: 992px) {
+  .header {
+    height: 100vh;
+  }
+}
 @media (max-width: 992px) {
   .header {
     &__banner {
