--- a/scss/components/header/header.scss
+++ b/scss/components/header/header.scss
@@ -1,5 +1,4 @@
 .header {
-  height: 100vh;
   background: linear-gradient(158deg, #121D39 71%, white 29%);
   padding-bottom: 30px;
   .container {
